# Agentic_Workflow

./: .dockerignore  .gitignore  Dockerfile  README.md  backend.py  custom_doc_and_sheet.py  entrypoint.sh  filesystem.py  frontend.py  orchestrator.py  pydantic_schema.py  pyproject.toml  ragsystem.py  requirements.txt  server_systematic_vault.py  todoist.py
