[project]
name = "agentic-workflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.138.0",
    "fastmcp[standard]>=3.4.2",
    "google-api-python-client>=2.197.0",
    "google-auth-httplib2>=0.4.0",
    "google-auth-oauthlib>=1.4.0",
    "langchain>=1.3.9",
    "langchain-classic>=1.0.8",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.7",
    "langchain-google-genai>=4.2.5",
    "langchain-huggingface>=1.2.2",
    "langchain-mcp-adapters>=0.3.0",
    "langchain-pinecone>=0.2.13",
    "langgraph>=1.2.5",
    "langgraph-checkpoint-postgres>=3.1.0",
    "llama-parse>=0.6.94",
    "nltk>=3.9.4",
    "pinecone>=7.3.0",
    "pinecone-text>=0.11.0",
    "psycopg-pool>=3.3.1",
    "pypdf>=6.13.3",
    "python-dotenv>=1.2.2",
    "pytz>=2026.2",
    "sentence-transformers>=5.6.0",
    "streamlit>=1.58.0",
    "todoist-api-python>=4.0.0",
    "uvicorn>=0.49.0",
]
