[project]
name = "agentic-workflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckduckgo-mcp-server>=0.4.0",
    "fastapi==0.138.0",
    "fastmcp==3.4.2",
    "google-api-python-client==2.197.0",
    "google-auth-oauthlib==1.4.0",
    "langchain==1.3.9",
    "langchain-classic==1.0.8",
    "langchain-community==0.4.2",
    "langchain-core==1.4.7",
    "langchain-google-genai==4.2.5",
    "langchain-mcp-adapters==0.3.0",
    "langchain-pinecone==0.2.13",
    "langchain-text-splitters==1.1.2",
    "langgraph==1.2.5",
    "langgraph-checkpoint-postgres==3.1.0",
    "llama-parse==0.6.94",
    "nest-asyncio==1.6.0",
    "nltk==3.9.4",
    "pinecone==7.3.0",
    "pinecone-text==0.11.0",
    "psycopg[binary,pool]==3.3.4",
    "pydantic==2.13.4",
    "pytz==2026.2",
    "streamlit==1.58.0",
    "todoist-api-python==4.0.0",
]
